css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/*----- General Styles -----*/

  html {
    font-size: 16px;
  }

  body {
    font-family: 'Open Sans', sans-serif;
    font-size: 1em;
  }

  ul,
  ol {
    font-family: 'Open Sans', sans-serif;
    font-size: 1.125em;
    text-transform: uppercase;
  }

  a {
    color: #e2e3ed;
    text-decoration: none;
  }

  h1 {
    font-size: 2.25em;
    font-family: 'Poppins', sans-serif;
    font-weight: normal;
  }

  h2 {
    font-family: 'Poppins', sans-serif;
    font-size: 1.875em;
    font-weight: normal;
  }

  h3,
  h4 {
    font-family: 'Poppins', sans-serif;
    font-size: 1.125em;
    font-weight: normal;
    font-style: normal;
  }

  p {
    font-size: 0.875em;
  }

  img {
    width: 100%;
  }

  figure {
    margin: 0;
  }

  address {
    font-family: 'Open Sans', sans-serif;
    font-size: 0.875em;
  }

  .content-wrapper {

  }

  .copyright {
    color: #e2e3ed;
    padding-bottom: 8px;
  }



/*------------ Base Header / Footer Styles -------------*/
  header,
  footer {
    display: flex;
    align-items: center;
    flex-flow: row wrap;
  }

  /*------------ Header styles -------------*/

  header {
    background-color: #202322;
  }

  header .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    margin: 0;
    width: 100%;
  }

  header img {
    padding: 20px 0;
  }

  .header-divider {
   width: 150%;
   margin: 0;
   border: 1px solid #3a3a3a;
  }

  header nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-flow: row wrap;
    width: 60%;
  }

  header nav ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 45%;
    padding: 35px 0;
    margin: 0 0;
    list-style: none;
  }

  header figure {
    width: 60%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
  }

/*------------ Mobile Styles - Homepage -------------*/

 .content-wrapper {
   width: 90%;
 }

 .hero-area {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   background-image: url('../assets/hero-image.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }

 .hero-area h1 {
   margin: 55px 0px;
   text-align: left;
   padding-bottom: 330px;
   color: #e2e3ed;
 }

 aside {
   background-color: #527158;
   color: #e2e3ed;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }

  aside .form-description{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-flow: row wrap;
    padding: 0 20px;
  }

  aside .form {
    width: 90%;
    display: flex;
    flex-flow: column wrap;
    padding-bottom: 50px;
  }

  .features {
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url('../assets/features.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    color: #e2e3ed;
  }

  .features p {
    margin: 0;
    color: #e1e2ea;
  }

.features article {
    width: 63%;
    margin: 30px 0;
  }

  .features .features-items {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
  }

  .features i {
    font-size: 3.75em;
    margin-bottom: 40px;
  }

  .fontawesome-icon {
    display: flex;
    justify-content: center;
  }

  .features-item-description {
    margin: 40px 20%;
    text-align: center;
  }

  .reviews {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    padding: 0 20px;
    background-color: #2a423a;
    color: #e2e3ed;
  }

   .reviews h3 {
    width: 47%;
    margin-right: 165px;
  }

  .review-description {
    padding: 25px 0;
    width: 100%;
  }



/*------------ Footer -------------*/

  footer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: #202322;
  }

  footer p {
    margin: 0;
    text-align: center;
  }

  footer .content-wrapper {
    width: 55%;
    margin: 50px 0;
    color: #e2e3ed;
  }
/* ... */

